tests/lean/crash.lean.expected.out
crash.lean:8:12: error: type mismatch at application
  have H' : not P, from H,
  _
expected type:
  not P
given type:
  P
